--- a/style/mobile.css
+++ b/style/mobile.css
@@ -5,5 +5,33 @@
     display: none;
 }
 .hero-image {
-    min-height: 250px;
+    min-height: 280px;
+}
+.hero-section {
+  position: static;
+}
+
+.hero-description {
+  width: 80%;
+  left: 10%;
+  padding: 20px;
+  top: 300px;
+}
+.blog-section{
+  margin-top: 16rem;
+}
+.single-post{
+  flex-basis: 100%;
+}
+.footer-wrapper{
+  max-width: 100%;
+  margin: 0;
+  justify-content: center;
+}
+.footer-links{
+flex-direction: column;
+row-gap: 20px;
+}
+.footer-links li{
+  border: none;
 }
