--- a/style/style.css
+++ b/style/style.css
@@ -84,6 +84,9 @@
     max-width: var(--max-width);
     margin: auto; 
 }
+.hero-section{
+    position: relative;
+}
 .hero-image{
     min-height: 600px;
     background-image: url(../img/hero.png);
@@ -94,6 +97,9 @@
     background-size: cover;
 }
 .hero-description {
+    position: absolute;
+    top: 360px;
+    left: 64px;
   width: 600px;
   background-color: #fff;
   border-radius: 0.5rem;
@@ -139,4 +145,102 @@
 .author-section img {
   width: 48px;
   height: auto;
+}
+/* Latest posts */
+.blog-section {
+  margin-top: 10rem;
+}
+.blog-section h1{
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 1.2;
+
+}
+.posts{
+  margin: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.single-post{
+  flex-basis:32%;
+  border: 1px solid #e8e8ea;
+  border-radius: 0.75rem;
+  padding: 16px;
+}
+.single-post img {
+  width: 100%;
+  border-radius: 0.6rem;
+}
+.single-post .article-details{
+  padding: 24px 8px;
+}
+.single-post h2 a{
+  text-decoration: none;
+  font-size: 1.5rem;
+  line-height: 1.2;
+  font-weight:600;
+  color: #181A2A;
+}
+.single-post .hero-badge {
+  background-color: rgba(75, 107, 251, 0.05);
+  color: var(--primary-color);
+}
+
+.single-post .author-section img {
+  width: 36px;
+  height: auto;
+}
+.view-all{
+  display: flex;
+  justify-content: center;
+ padding: 32px;
+}
+.view-all a{
+  text-decoration: none;
+  padding: 12px 24px;
+  font-size: 1rem;
+  line-height: 1.3;
+  border-radius: 0.5rem;
+  border:1px solid #696A75;
+  color: #696A75;
+  transition: background-color ,color ,0.5s ;
+}
+.view-all a:hover{
+background-color: var(--primary-color);
+color:#ffff ;
+}
+/* Footer Styles */
+.footer{
+  background-color: #f6f6f7;
+  padding: 32px;
+}
+.footer-wrapper{
+  display: flex;
+  max-width: var(--max-width);
+  margin: auto;
+  padding: 0 16px;
+  justify-content: flex-end;
+}
+.footer-links{
+  display: flex;
+}
+.footer-links li{
+  padding: 0 16px;
+  border-radius: 1px solid #C6C6C6;
+}
+.footer-links li:last-child{
+  padding: 0 0 0 16px;
+  border-right: none;
+}
+.footer-links li a{
+  text-decoration: none;
+  font-family: var(--font-family);
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #3B3C4A;
+  transition: color 0.5s;
+}
+.footer-links li a:hover{
+  color: var(--primary-color);
 }
